#11460 폰트 패밀리 적용

--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -84,73 +84,6 @@ input, button, select, optgroup, textarea {
   --data-color: "";
 }
 
-/*
-@mixin defaultListTemplate() {
-  .list {
-    a, button { cursor: pointer; }
-    // 테이블
-    &-table {
-      position: relative;
-      display: inline-table;
-      width: 100%;
-    }
-    // thead
-    &-head {
-      tr {
-        height: 2.125rem; // 34px
-        border-bottom: 0.125rem solid map-get($grays, "default"); // 2px
-
-        th {
-          font-size: 1.125rem; // 18px
-          font-weight: $font-weight-medium;
-          color: map-get($blacks, "light");
-          padding: 0 0.9375rem; // 0 15px
-
-          &:first-child { padding-left: 1.25rem; } // 20px
-        }
-      }
-    }
-    // tbody
-    &-body {
-      position: absolute;
-      width: 100%;
-      height: 33.75rem; // 540px
-      tr {
-        height: 3.375rem; //54px
-        // 마우스 오버시 배경 색상
-        &:hover { background-color: $list-hover-bg-color; }
-        // 선택된 경우
-        &.active {
-          background-color: $list-active-bg-color;
-
-          td { color: $list-active-font-color; }
-        }
-
-        td {
-          font-size: 1rem; // 16px
-          font-weight: $font-weight-regular;
-          color: map-get($grays, "dark");
-          padding: 0 0.9375rem; // 0 15px
-          line-height: initial; // 소문자 글자 짤림현상 방지
-
-          &:first-child { padding-left: 1.25rem; } // 20px
-
-          a { color: map-get($grays, "dark"); }
-        }
-      }
-      // 데이터 없을때
-      .no-data-found-list {
-        background-color: $no-data-found-list-bg;
-        pointer-events: none;
-      }
-    }
-    // tree
-    &-tree {
-      height: 37.88rem; // 606px
-    }
-  }
-}
-*/
 /* _alignments.scss 
  *
  * 파일 경로 : template/utilities/_alignments.scss
@@ -653,6 +586,10 @@ input, button, select, optgroup, textarea {
   content: "*";
   font-weight: 700;
   margin-left: 0.1875rem;
+}
+
+.text-clip {
+  text-overflow: clip;
 }
 
 .text-ellipsis {
@@ -1193,23 +1130,13 @@ a:active {
 }
 
 table {
+  width: 100%;
   table-layout: fixed;
   border-collapse: collapse;
   border-spacing: 0;
-  font-family: inherit;
-  font-size: 0.875rem;
-  font-weight: 400;
-  color: #222529;
-  background-color: transparent;
-  border: 0.0625rem solid transparent;
+  line-height: 1.5;
 }
-table tr {
-  height: 2.5rem;
-}
-table tr th {
-  font-weight: 500;
-}
-table tr td, table tr th {
+table td, table th {
   display: table-cell;
   max-width: 100%;
   text-overflow: ellipsis;
@@ -1220,27 +1147,101 @@ table tr td, table tr th {
 }
 
 .z-table {
+  font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
+  font-size: 0.875rem;
+  font-weight: 400;
+  color: #222529;
+  background-color: transparent;
+  border: none;
+}
+.z-table td, .z-table th {
+  padding: 0 0.9375rem;
+}
+.z-table td:first-child, .z-table th:first-child {
+  padding-left: 1.25rem;
+}
+.z-table td a, .z-table th a {
+  color: #222529;
+}
+.z-table th {
+  font-family: "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #222529;
+}
+.z-table .z-table-head {
+  border-bottom: calc(0.0625rem * 2) solid #CFD5D9;
+}
+.z-table .z-table-head tr {
+  height: 2.5rem;
+}
+.z-table .z-table-body {
   width: 100%;
+  height: 100%;
+  border-bottom: 0.0625rem solid #CFD5D9;
+}
+.z-table .z-table-body tr {
+  height: 2.5625rem;
+}
+.z-table .z-table-body tr:hover {
+  background-color: #EEEEEE;
+}
+.z-table .z-table-body tr.active {
+  background-color: #E3F5FC;
+}
+.z-table .z-table-body tr.active td {
+  color: #1959AC;
+}
+.z-table .z-table-body .no-data-found-list {
+  pointer-events: none;
+}
+
+.z-option-table {
+  font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
   font-size: 0.875rem;
   font-weight: 400;
   color: #ABB0B5;
+  background-color: transparent;
   border: none;
-  border-collapse: collapse;
 }
-.z-table tr {
+.z-option-table tr {
   border-bottom: 0.0625rem solid #CFD5D9;
   border-left: none;
   border-right: none;
+  height: 2.5rem;
 }
-.z-table tr.z-table-head {
+.z-option-table tr th, .z-option-table tr td {
+  padding: 0 0.5rem;
+}
+.z-option-table tr.z-option-table-header {
   height: 2rem;
+  font-family: "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
+  font-size: 1rem;
   font-weight: 500;
+  color: #ABB0B5;
   border-top: 0.0625rem solid #CFD5D9;
   border-bottom: calc(0.0625rem * 2) solid #CFD5D9;
   background-color: #F5F5F5;
 }
-.z-table tr th, .z-table tr td {
-  padding: 0 0.5rem;
+.z-option-table tr.z-option-table-row .z-checkbox, .z-option-table tr.z-option-table-row .z-radio {
+  margin: 0 0 0 0.5rem;
+}
+.z-option-table tr.z-option-table-row .z-input {
+  width: 85%;
+  padding: 0.75rem;
+  margin: 0.25rem;
+}
+.z-option-table tr.z-option-table-row .z-input:not(:placeholder-shown):not(:focus) {
+  border-color: transparent;
+}
+.z-option-table tr.z-option-table-row .z-button-icon .z-icon {
+  display: block;
+  margin: 0 auto;
+  background: #ABB0B5;
+  pointer-events: none;
+}
+.z-option-table tr.z-option-table-row .z-button-icon:hover .z-icon {
+  background: #339AF0;
 }
 
 span {
@@ -1249,10 +1250,10 @@ span {
 }
 
 label {
-  font-family: inherit;
-  color: #222529;
+  font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
+  color: #8B9094;
   font-size: 0.875rem;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .input-button {
@@ -2320,30 +2321,24 @@ body.modal-active {
 .modal-wrapper .modal-dialog.cmdb-ci-register-modal .modal-content .table-set, .modal-wrapper .modal-dialog.cmdb-ci-update-modal .modal-content .table-set, .modal-wrapper .modal-dialog.cmdb-ci-view-modal .modal-content .table-set, .modal-wrapper .modal-dialog.cmdb-ci-list-modal .modal-content .table-set {
   margin-top: 2.188rem;
 }
-.modal-wrapper .modal-dialog.cmdb-ci-register-modal .modal-content .table-set table, .modal-wrapper .modal-dialog.cmdb-ci-update-modal .modal-content .table-set table, .modal-wrapper .modal-dialog.cmdb-ci-view-modal .modal-content .table-set table, .modal-wrapper .modal-dialog.cmdb-ci-list-modal .modal-content .table-set table {
-  width: 100%;
-}
-.modal-wrapper .modal-dialog.cmdb-ci-register-modal .modal-content .table-set table .z-list-head tr, .modal-wrapper .modal-dialog.cmdb-ci-update-modal .modal-content .table-set table .z-list-head tr, .modal-wrapper .modal-dialog.cmdb-ci-view-modal .modal-content .table-set table .z-list-head tr, .modal-wrapper .modal-dialog.cmdb-ci-list-modal .modal-content .table-set table .z-list-head tr {
-  color: #222529;
-  border-bottom: calc(0.0625rem * 2) solid #CFD5D9;
-}
-.modal-wrapper .modal-dialog.cmdb-ci-register-modal .modal-content .table-set table .z-list-body, .modal-wrapper .modal-dialog.cmdb-ci-update-modal .modal-content .table-set table .z-list-body, .modal-wrapper .modal-dialog.cmdb-ci-view-modal .modal-content .table-set table .z-list-body, .modal-wrapper .modal-dialog.cmdb-ci-list-modal .modal-content .table-set table .z-list-body {
+.modal-wrapper .modal-dialog.cmdb-ci-register-modal .modal-content .table-set .z-table .z-table-body, .modal-wrapper .modal-dialog.cmdb-ci-update-modal .modal-content .table-set .z-table .z-table-body, .modal-wrapper .modal-dialog.cmdb-ci-view-modal .modal-content .table-set .z-table .z-table-body, .modal-wrapper .modal-dialog.cmdb-ci-list-modal .modal-content .table-set .z-table .z-table-body {
   display: block;
   width: 60rem;
   height: 32.8125rem;
   overflow-y: auto;
+  border: none;
 }
-.modal-wrapper .modal-dialog.cmdb-ci-register-modal .modal-content .table-set table .z-list-body .list-row, .modal-wrapper .modal-dialog.cmdb-ci-update-modal .modal-content .table-set table .z-list-body .list-row, .modal-wrapper .modal-dialog.cmdb-ci-view-modal .modal-content .table-set table .z-list-body .list-row, .modal-wrapper .modal-dialog.cmdb-ci-list-modal .modal-content .table-set table .z-list-body .list-row {
+.modal-wrapper .modal-dialog.cmdb-ci-register-modal .modal-content .table-set .z-table .z-table-body .list-row, .modal-wrapper .modal-dialog.cmdb-ci-update-modal .modal-content .table-set .z-table .z-table-body .list-row, .modal-wrapper .modal-dialog.cmdb-ci-view-modal .modal-content .table-set .z-table .z-table-body .list-row, .modal-wrapper .modal-dialog.cmdb-ci-list-modal .modal-content .table-set .z-table .z-table-body .list-row {
   display: table;
   width: 100%;
   height: 3.125rem;
   line-height: 3.125rem;
 }
-.modal-wrapper .modal-dialog.cmdb-ci-register-modal .modal-content .table-set table .z-list-body .list-row > td, .modal-wrapper .modal-dialog.cmdb-ci-update-modal .modal-content .table-set table .z-list-body .list-row > td, .modal-wrapper .modal-dialog.cmdb-ci-view-modal .modal-content .table-set table .z-list-body .list-row > td, .modal-wrapper .modal-dialog.cmdb-ci-list-modal .modal-content .table-set table .z-list-body .list-row > td {
+.modal-wrapper .modal-dialog.cmdb-ci-register-modal .modal-content .table-set .z-table .z-table-body .list-row > td, .modal-wrapper .modal-dialog.cmdb-ci-update-modal .modal-content .table-set .z-table .z-table-body .list-row > td, .modal-wrapper .modal-dialog.cmdb-ci-view-modal .modal-content .table-set .z-table .z-table-body .list-row > td, .modal-wrapper .modal-dialog.cmdb-ci-list-modal .modal-content .table-set .z-table .z-table-body .list-row > td {
   display: inline-block;
   vertical-align: middle;
 }
-.modal-wrapper .modal-dialog.cmdb-ci-register-modal .modal-content .table-set table .z-list-body .list-row > td .tag-group, .modal-wrapper .modal-dialog.cmdb-ci-update-modal .modal-content .table-set table .z-list-body .list-row > td .tag-group, .modal-wrapper .modal-dialog.cmdb-ci-view-modal .modal-content .table-set table .z-list-body .list-row > td .tag-group, .modal-wrapper .modal-dialog.cmdb-ci-list-modal .modal-content .table-set table .z-list-body .list-row > td .tag-group {
+.modal-wrapper .modal-dialog.cmdb-ci-register-modal .modal-content .table-set .z-table .z-table-body .list-row > td .tag-group, .modal-wrapper .modal-dialog.cmdb-ci-update-modal .modal-content .table-set .z-table .z-table-body .list-row > td .tag-group, .modal-wrapper .modal-dialog.cmdb-ci-view-modal .modal-content .table-set .z-table .z-table-body .list-row > td .tag-group, .modal-wrapper .modal-dialog.cmdb-ci-list-modal .modal-content .table-set .z-table .z-table-body .list-row > td .tag-group {
   display: initial;
   line-height: 1.2;
 }
