--- a/src/main/resources/public/template/board/boardSearch.html
+++ b/src/main/resources/public/template/board/boardSearch.html
@@ -27,7 +27,7 @@
         </div>
 </div>
 <div layout:fragment="pageList">
-    <div class="z-list-content" id="boardAdminList"></div>
+    <div class="z-list-content flex-row" id="boardAdminList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
