--- a/src/main/resources/public/template/cmdb/ci/ciSearch.html
+++ b/src/main/resources/public/template/cmdb/ci/ciSearch.html
@@ -29,7 +29,7 @@
     </form>
 </div>
 <div layout:fragment="pageList">
-    <div class="z-list-content" id="ciList"></div>
+    <div class="z-list-content flex-row" id="ciList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
