--- a/src/main/resources/public/template/custom-code/customCodeSearch.html
+++ b/src/main/resources/public/template/custom-code/customCodeSearch.html
@@ -29,7 +29,7 @@
     </div>
 </div>
 <div layout:fragment="pageList">
-    <div class="z-list-content" id="customCodeList"></div>
+    <div class="z-list-content flex-row" id="customCodeList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
