--- a/src/main/resources/public/template/download/downloadSearch.html
+++ b/src/main/resources/public/template/download/downloadSearch.html
@@ -32,7 +32,7 @@
     </div>
 </div>
 <div layout:fragment="pageList">
-    <div class="z-list-content" id="downloadList"></div>
+    <div class="z-list-content flex-row" id="downloadList"></div>
 </div>
 </body>
 
