--- a/src/main/resources/public/template/faq/faqSearch.html
+++ b/src/main/resources/public/template/faq/faqSearch.html
@@ -23,7 +23,7 @@
     </div>
 </div>
 <div layout:fragment="pageList">
-    <div class="z-list-content" id="faqList"></div>
+    <div class="z-list-content flex-row" id="faqList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
