--- a/src/main/resources/public/template/formDesigner/formSearch.html
+++ b/src/main/resources/public/template/formDesigner/formSearch.html
@@ -31,7 +31,7 @@
     </div>
 </div>
 <div layout:fragment="pageList">
-    <div class="z-list-content" id="formList"></div>
+    <div class="z-list-content flex-row" id="formList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
