--- a/src/main/resources/public/template/portal/faq/portalFaq.html
+++ b/src/main/resources/public/template/portal/faq/portalFaq.html
@@ -17,7 +17,7 @@
                 <option th:each="category:${faqs.faqCategory}"
                         th:text="${category.codeName}" th:value="${category.code}"></option>
             </select>
-            <span id="spanTotalCount" class="search-count"></span>
+            <span id="spanTotalCount" class="z-search-count"></span>
         </div>
     </div>
 </th:block>
