--- a/src/main/resources/public/template/portal/notice/noticeSearch.html
+++ b/src/main/resources/public/template/portal/notice/noticeSearch.html
@@ -26,7 +26,7 @@
     </div>
 </th:block>
 <th:block layout:fragment="pageList">
-    <div class="z-list-content" id="noticeList"></div>
+    <div class="z-list-content flex-row" id="noticeList"></div>
 </th:block>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
