--- a/src/main/resources/public/template/process/processDesignerEdit.html
+++ b/src/main/resources/public/template/process/processDesignerEdit.html
@@ -198,10 +198,10 @@
         <div class="process-info-main">
             <h5 class="process-info-title" th:text="#{process.designer.attribute.processInformation}"></h5>
             <div class="process-info-dashboard">
-                <h5 class="total align-right">
+                <h6 class="total align-right">
                     <span th:text="|#{process.designer.attribute.totalCount} : |">Total Count</span><span id="element-count"></span>
-                </h5>
-                <table>
+                </h6>
+                <table class="z-table">
                     <colgroup>
                         <col width="80%">
                         <col width="*">
