--- a/src/main/resources/public/template/process/processSearch.html
+++ b/src/main/resources/public/template/process/processSearch.html
@@ -30,7 +30,7 @@
     </div>
 </div>
 <div layout:fragment="pageList">
-    <div class="z-list-content" id="processList"></div>
+    <div class="z-list-content flex-row" id="processList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
