--- a/src/main/resources/public/template/report/reportSearch.html
+++ b/src/main/resources/public/template/report/reportSearch.html
@@ -25,7 +25,7 @@
     </form>
 </div>
 <div layout:fragment="pageList">
-    <div class="z-list-content" id="reportList"></div>
+    <div class="z-list-content flex-row" id="reportList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
