--- a/src/main/resources/public/template/role/roleSearch.html
+++ b/src/main/resources/public/template/role/roleSearch.html
@@ -20,7 +20,7 @@
     </div>
 </div>
 <div layout:fragment="pageList">
-    <div class="z-list-content" id="roleList"></div>
+    <div class="z-list-content flex-row" id="roleList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
