--- a/src/main/resources/public/template/token/tokenSearch.html
+++ b/src/main/resources/public/template/token/tokenSearch.html
@@ -31,7 +31,7 @@
         <input type="hidden" class="search-date col-2" id="searchToDt" name="searchToDt" readonly="readonly"/>
         <input  type="text" class="z-input i-search col-3 mr-2" id="searchTag" name="searchTag"
                 maxlength="100" th:placeholder="#{token.label.tagPlaceHolder}"/>
-        <span id="spanTotalCount" class="search-count"></span>
+        <span id="spanTotalCount" class="z-search-count"></span>
     </form>
 </div>
 <div layout:fragment="pageSearchResult">
