--- a/src/main/resources/public/template/token/tokenTab.html
+++ b/src/main/resources/public/template/token/tokenTab.html
@@ -51,7 +51,7 @@
     <div class="related-instance-list">
         <input class="z-input i-search col-5 mr-2" type="text" name="search" id="search" maxlength="100"
                th:placeholder="#{token.label.relatedInstancePlaceholder}"/>
-        <span id="spanTotalCount" class="search-count"></span>
+        <span id="spanTotalCount" class="z-search-count"></span>
         <div class="table-set" id="instanceList"></div>
     </div>
 </template>
