--- a/src/main/resources/public/scss/portal/_elements.scss
+++ b/src/main/resources/public/scss/portal/_elements.scss
@@ -1,4 +1,4 @@
-@import "../template/elements";
+@import '../template/elements';
 
 label {
   display: inline-block;
@@ -11,23 +11,8 @@ summary {
   &:focus { outline: none; }
 }
 
-table { 
-  width: 100%;
-  thead {
-    display: block;
-    tr {
-      display: flex;
-      height: 2.125rem; //34px
-      th {
-        color: $table-th-font-color;
-        vertical-align: middle;
-        &:first-child {
-          padding-left: 1.25rem; // 20px
-        }
-      }
-    }
-  }
-  tbody {
+.z-table {
+  .z-table-body {
     display: block;
     height: $table-body-height;
     tr {
@@ -35,25 +20,10 @@ table {
       table-layout: fixed;
       width: 100%;
       height: 3.375rem; // 54px
-      td {
-        font-size: $table-td-font-size;
-        font-weight: $table-td-font-weight;
-        color: $table-td-font-color;
-        vertical-align: middle;
-
-        &:first-child {
-          padding-left: 1.25rem; // 20px
-        }
-
-        a { color: $table-td-font-color; }
-      }
-      &.no-data-found-list {
-        background-color: $no-data-found-bg-color;
-        pointer-events: none;
-      }
-      &:hover {
-        background-color: $table-row-hover-bg-color;
-      }
     }
+  }
+
+  &.z-card-table {
+    tr { height: 2.5rem; } // 40px
   }
 }
