--- a/src/main/resources/public/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/scss/template/mixins/_layout.scss
@@ -29,6 +29,7 @@
     }
     // 등록일, 등록자
     &-sub-title {
+      font-family: $view-sub-title-font-family;
       font-size: $view-sub-title-font-size;
       font-weight: $view-sub-title-font-weight;
       color: $view-sub-title-font-color;
@@ -83,6 +84,7 @@
     .z-button-list { margin-top: 1.875rem; } // 30px
 
     &-sub-title {
+      font-family: $view-sub-title-font-family;
       font-size: $view-sub-title-font-size;
       font-weight: $view-sub-title-font-weight;
       color: $view-sub-title-font-color;
@@ -123,6 +125,7 @@
     }
     // 등록일, 등록자
     &-sub-title {
+      font-family: $view-sub-title-font-family;
       font-size: $view-sub-title-font-size;
       font-weight: $view-sub-title-font-weight;
       color: $view-sub-title-font-color;
@@ -253,71 +256,18 @@
     flex: 1;  // flex: 1 1 0;
     padding: 0 3.75rem 1.25rem 3.75rem; // 0 60px 20px 60px
 
-    .z-list {
-      &-content {
-        display: flex;
-        flex: 1; // flex: 1 1 0;
-        a, button { cursor: pointer; }
-      }
-      // 테이블
-      &-table {
-        @include relative();
-        flex-direction: column;
-        width: 100%;
-        border: none;
-      }
-      // thead
-      &-head {
-        @include border(calc(#{$list-border-width} * 2), solid, $list-border-color, bottom);
-        tr {
-          height: 2.5rem; // 42px
-          th {
-            font-size: $font-size-s;
-            font-weight: $font-weight-medium;
-            color: $list-head-font-color;
-            padding: 0 0.9375rem; // 0 15px
-            line-height: 1.5;
+    .z-list-content {
+      flex: 1;
+      a, button { cursor: pointer; }
+    }
 
-            &:first-child { padding-left: 1.25rem; } // 20px
-          }
-        }
-      }
-      // tbody
-      &-body {
-        width: 100%;
-        height: 100%;
-        @include border($list-border-width, solid, $list-border-color, bottom);
-        tr {
-          height: 2.5625rem; // 41px
-          // 마우스 오버시 배경 색상
-          &:hover { background-color: $list-hover-bg-color; }
-          // 선택된 경우
-          &.active {
-            background-color: $list-active-bg-color;
-            td { color: $list-active-font-color; }
-          }
-          td {
-            font-size: $font-size-xs;
-            font-weight: $font-weight-regular;
-            color: $list-body-font-color;
-            padding: 0 0.9375rem; // 0 15px
-            line-height: initial; // 소문자 글자 짤림현상 방지
+    .z-table {
+      @include relative();
+      border: none;
+    }
 
-            &:first-child { padding-left: 1.25rem; } // 20px
-
-            a { color: $list-body-font-color; }
-          }
-        }
-        // 데이터 없을때
-        .no-data-found-list {
-          background-color: $no-data-found-list-bg;
-          pointer-events: none;
-        }
-      }
-      // tree
-      &-tree {
-        height: 37.88rem; // 606px
-      }
+    .z-list-tree {
+      height: 37.88rem; // 606px
     }
   }
 }
@@ -392,74 +342,7 @@
     }
   }
 }
-// list
-/*
-@mixin defaultListTemplate() {
-  .list {
-    a, button { cursor: pointer; }
-    // 테이블
-    &-table {
-      position: relative;
-      display: inline-table;
-      width: 100%;
-    }
-    // thead
-    &-head {
-      tr {
-        height: 2.125rem; // 34px
-        border-bottom: 0.125rem solid map-get($grays, "default"); // 2px
 
-        th {
-          font-size: 1.125rem; // 18px
-          font-weight: $font-weight-medium;
-          color: map-get($blacks, "light");
-          padding: 0 0.9375rem; // 0 15px
-
-          &:first-child { padding-left: 1.25rem; } // 20px
-        }
-      }
-    }
-    // tbody
-    &-body {
-      position: absolute;
-      width: 100%;
-      height: 33.75rem; // 540px
-      tr {
-        height: 3.375rem; //54px
-        // 마우스 오버시 배경 색상
-        &:hover { background-color: $list-hover-bg-color; }
-        // 선택된 경우
-        &.active {
-          background-color: $list-active-bg-color;
-
-          td { color: $list-active-font-color; }
-        }
-
-        td {
-          font-size: 1rem; // 16px
-          font-weight: $font-weight-regular;
-          color: map-get($grays, "dark");
-          padding: 0 0.9375rem; // 0 15px
-          line-height: initial; // 소문자 글자 짤림현상 방지
-
-          &:first-child { padding-left: 1.25rem; } // 20px
-
-          a { color: map-get($grays, "dark"); }
-        }
-      }
-      // 데이터 없을때
-      .no-data-found-list {
-        background-color: $no-data-found-list-bg;
-        pointer-events: none;
-      }
-    }
-    // tree
-    &-tree {
-      height: 37.88rem; // 606px
-    }
-  }
-}
-*/
 // card
 @mixin defaultCardTemplate() {
   .card-list {
