--- a/src/main/resources/public/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/scss/theme/default/_variables.scss
@@ -91,7 +91,8 @@ $view-title-font-size:                        $font-size-m; // 18px
 $view-title-font-weight:                      $font-weight-medium;
 $view-title-font-color:                       $gray800;
 
-$view-sub-title-font-size:                    $font-size-s; // 16px
+$view-sub-title-font-family:                  $font-family-s;
+$view-sub-title-font-size:                    $font-size-xs; // 14px
 $view-sub-title-font-weight:                  $font-weight-regular;
 $view-sub-title-font-color:                   $gray500;
 
