--- a/src/main/resources/public/template/auth/authSearch.html
+++ b/src/main/resources/public/template/auth/authSearch.html
@@ -21,7 +21,7 @@
     </div>
 </div>
 <div layout:fragment="pageList">
-    <div class="z-list-content" id="authList"></div>
+    <div class="z-list-content flex-row" id="authList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
