--- a/src/main/resources/public/template/board/boardArticlesList.html
+++ b/src/main/resources/public/template/board/boardArticlesList.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<table class="z-list-table">
-    <thead class="z-list-head">
+<table class="z-table">
+    <thead class="z-table-head">
         <tr class="flex-row align-items-center">
             <th style="width:10%;" class="align-left" th:text="#{board.label.number}"></th>
             <th style="width:15%;" class="align-left" th:if="${categoryUseYn}" th:text="#{board.label.category}"></th>
@@ -16,7 +16,7 @@
             <th style="width:15%;" class="align-left" th:text="#{common.label.writeDate}"></th>
         </tr>
     </thead>
-    <tbody class="z-list-body">
+    <tbody class="z-table-body">
         <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(boardList)}">
             <td style="width:100%" colspan="7" class="align-center" th:text="#{common.msg.noData}"></td>
         </tr>
