--- a/src/main/resources/public/template/board/boardArticlesSearch.html
+++ b/src/main/resources/public/template/board/boardArticlesSearch.html
@@ -31,7 +31,7 @@
     </div>
 </div>
 <div layout:fragment="pageList">
-    <div class="z-list-content" id="boardList"></div>
+    <div class="z-list-content flex-row" id="boardList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
