--- a/src/main/resources/public/template/board/boardEdit.html
+++ b/src/main/resources/public/template/board/boardEdit.html
@@ -82,20 +82,20 @@
                 </div>
             </div>
             <div class="flex-row">
-                <div class="category-list">
-                    <table class="edit-table">
-                        <thead class="edit-table-thead">
-                        <tr>
+                <div class="category-list mt-2">
+                    <table class="z-option-table">
+                        <thead>
+                        <tr class="z-option-table-header">
                             <th class="col-6 align-left" th:text="#{board.label.category}"></th>
                             <th class="col-5 align-left" th:text="#{board.label.order}"></th>
                             <th class="col-1 align-center"></th>
                         </tr>
                         </thead>
-                        <tbody id="boardCategoryList" class="edit-table-tbody">
+                        <tbody id="boardCategoryList">
                         <tr class="no-data-found-list align-center" th:if="${#arrays.isEmpty(boardAdmin?.categoryList)}">
                             <td style="width:100%" colspan="5" th:text="#{common.msg.noData}"></td>
                         </tr>
-                        <tr th:each="category: ${boardAdmin?.categoryList}">
+                        <tr class="z-option-table-row" th:each="category: ${boardAdmin?.categoryList}">
                             <td class="col-6 align-left text-wordWrap" th:text="${category.boardCategoryName}"></td>
                             <td class="col-5 align-left" th:text="${category.boardCategorySort}"></td>
                             <td class="col-1 align-center">
