--- a/src/main/resources/public/template/chart/chartList.html
+++ b/src/main/resources/public/template/chart/chartList.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<table class="z-list-table">
-    <thead class="z-list-head">
+<table class="z-table">
+    <thead class="z-table-head">
         <tr class="flex-row align-items-center">
             <th style="width: 20%;" class="align-left" th:text="#{chart.label.name}"></th>
             <th style="width: 20%;" class="align-left" th:text="#{chart.label.type}"></th>
@@ -16,7 +16,7 @@
             <th style="width: 15%;" class="align-left" th:text="#{common.label.createDate}"></th>
         </tr>
     </thead>
-    <tbody class="z-list-body">
+    <tbody class="z-table-body">
         <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(chartList)}">
             <td style="width:100%;" colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
         </tr>
