--- a/src/main/resources/public/template/cmdb/attribute/attributeSearch.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeSearch.html
@@ -27,7 +27,7 @@
     </div>
 </div>
 <div layout:fragment="pageList">
-    <div class="z-list-content" id="attributeList"></div>
+    <div class="z-list-content flex-row" id="attributeList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
