--- a/src/main/resources/public/template/cmdb/ci/ciView.old.html
+++ b/src/main/resources/public/template/cmdb/ci/ciView.old.html
@@ -80,8 +80,8 @@
                 <h3 class="sub-title under-bar bold mt-4" th:text="#{cmdb.ci.label.history}"></h3>
             </div>
             <div class="ci-list" id="ciHistoryList">
-                <table class="z-list-table">
-                    <thead class="z-list-head">
+                <table class="z-table">
+                    <thead class="z-table-head">
                     <tr class="flex-row align-items-center">
                         <th style="width: 40%;" class="align-left" th:text="#{cmdb.ci.label.relatedDocument}"></th>
                         <th style="width: 20%;" class="align-left" th:text="#{cmdb.ci.label.createUser}"></th>
@@ -90,7 +90,7 @@
                         <th style="width: 10%;" th:text="#{cmdb.ci.label.whetherToInterlink}"></th>
                     </tr>
                     </thead>
-                    <tbody class="z-list-body">
+                    <tbody class="z-table-body">
                     <!--no data-->
                     <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(ciHistoryList)}">
                         <td style="width: 100%;" colspan="5" class="align-center" th:text="#{common.msg.noData}"></td>
@@ -113,14 +113,14 @@
                 <h3 class="sub-title under-bar bold mt-4" th:text="#{cmdb.ci.label.relation}"></h3>
             </div>
             <div class="ci-list" id="ciRelationList">
-                <table class="z-list-table">
-                    <thead class="z-list-head">
+                <table class="z-table">
+                    <thead class="z-table-head">
                     <tr class="flex-row align-items-center">
                         <th style="width: 40%;" class="align-left" th:text="#{cmdb.ci.label.relationType}"></th>
                         <th style="width: 60%;" class="align-left" th:text="#{cmdb.ci.label.targetCiName}"></th>
                     </tr>
                     </thead>
-                    <tbody class="z-list-body">
+                    <tbody class="z-table-body">
                     <!--no data-->
                     <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(ciRelationList)}">
                         <td style="width: 100%;" colspan="5" class="align-center" th:text="#{common.msg.noData}"></td>
