--- a/src/main/resources/public/template/download/downloadList.html
+++ b/src/main/resources/public/template/download/downloadList.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<table class="z-list-table">
-    <thead class="z-list-head">
+<table class="z-table">
+    <thead class="z-table-head">
         <tr class="flex-row align-items-center">
             <th style="width:5%;" class="align-center" th:text="#{download.label.seq}"></th>
             <th style="width:10%;" class="align-center" th:text="#{download.label.category}"></th>
@@ -16,7 +16,7 @@
             <th style="width:20%;" class="align-center" th:text="#{common.label.createDate}"></th>
         </tr>
     </thead>
-    <tbody class="z-list-body">
+    <tbody class="z-table-body">
         <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(downloadList)}">
             <td style="width:100%" colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
         </tr>
