--- a/src/main/resources/public/template/notice/noticeSearch.html
+++ b/src/main/resources/public/template/notice/noticeSearch.html
@@ -29,7 +29,7 @@
     </div>
 </div>
 <div layout:fragment="pageList">
-    <div class="z-list-content" id="noticeList"></div>
+    <div class="z-list-content flex-row" id="noticeList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
@@ -132,7 +132,7 @@
 
     // Tr 동적 데이터 만들기
     function getDataTemplate(data) {
-        let div = document.querySelector('.z-list-body .os-content');
+        let div = document.querySelector('.z-table-body .os-content');
         let tr = document.createElement('tr');
         tr.className = 'flex-row align-items-center';
 
