--- a/src/main/resources/public/template/numbering-rule/numberingRuleList.html
+++ b/src/main/resources/public/template/numbering-rule/numberingRuleList.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <body>
-<table class="z-list-table">
-    <thead class="z-list-head">
+<table class="z-table">
+    <thead class="z-table-head">
     <tr class="flex-row align-items-center">
         <th style="width:30%;" class="align-left" th:text="#{rule.label.name}"></th>
         <th style="width:30%;" class="align-left" th:text="#{rule.label.desc}"></th>
@@ -11,7 +11,7 @@
         <th style="width:20%;" class="align-left" th:text="#{rule.label.date}"></th>
     </tr>
     </thead>
-    <tbody class="z-list-body">
+    <tbody class="z-table-body">
     <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(ruleList)}">
         <td style="width:100%" colspan="3" class="align-center" th:text="#{common.msg.noData}"></td>
     </tr>
