--- a/src/main/resources/public/template/portal/notice/noticeList.html
+++ b/src/main/resources/public/template/portal/notice/noticeList.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<table>
-    <thead>
-        <tr>
+<table class="z-table flex-column">
+    <thead class="z-table-head">
+        <tr class="flex-row">
             <th width="75%" th:text="#{common.label.title}"></th>
             <th width="10%" th:text="#{common.label.createUser}"></th>
             <th width="15%" th:text="#{common.label.createDate}"></th>
         </tr>
     </thead>
-    <tbody class="z-list-body">
+    <tbody class="z-table-body">
         <tr class="notice-pinned" th:each="topNotice: ${topNoticeList}">
             <td width="75%" class="align-left underline">
                 <a th:text="${topNotice.noticeTitle}"
