--- a/src/main/resources/public/template/portal/portalMain.html
+++ b/src/main/resources/public/template/portal/portalMain.html
@@ -14,7 +14,7 @@
         <input type="text" class="col-8 z-input i-search mr-2" id="searchValue" name="searchValue"
                th:value="${portalSearchDto?.searchValue}"
                th:placeholder="#{common.label.searchWord}" maxlength="100"/>
-        <span id="spanTotalCount" class="search-count"></span>
+        <span id="spanTotalCount" class="z-search-count"></span>
     </div>
 </th:block>
 <th:block layout:fragment="pageCard">
@@ -30,7 +30,7 @@
                     <h3 th:text="#{menu.notice.parent}"></h3>
                 </div>
                 <div class="z-card-list-summary">
-                    <table id="notice"></table>
+                    <table class="z-table z-card-table" id="notice"></table>
                 </div>
             </li>
             <li class="z-card flex-column">
@@ -43,7 +43,7 @@
                     <h3 th:text="#{menu.faq.parent}"></h3>
                 </div>
                 <div class="z-card-list-summary">
-                    <table id="faq"></table>
+                    <table class="z-table z-card-table" id="faq"></table>
                 </div>
             </li>
             <li class="z-card flex-column">
@@ -56,7 +56,7 @@
                     <h3 th:text="#{menu.download.parent}"></h3>
                 </div>
                 <div class="z-card-list-summary">
-                    <table id="download"></table>
+                    <table class="z-table z-card-table" id="download"></table>
                 </div>
             </li>
         </ul>
