--- a/src/main/resources/public/template/report/reportTemplateList.html
+++ b/src/main/resources/public/template/report/reportTemplateList.html
@@ -3,8 +3,8 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head></head>
 <body>
-<table class="z-list-table">
-    <thead class="z-list-head">
+<table class="z-table">
+    <thead class="z-table-head">
     <tr class="flex-row align-items-center">
         <th style="width:25%;" class="align-left" th:text="#{report.label.templateName}"></th>
         <th style="width:20%;" class="align-left" th:text="#{report.label.description}"></th>
@@ -14,7 +14,7 @@
         <th style="width:5%;" class="align-center"></th>
     </tr>
     </thead>
-    <tbody class="z-list-body">
+    <tbody class="z-table-body">
     <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(templateList)}">
         <td style="width:100%" colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
     </tr>
