--- a/src/main/resources/public/template/scheduler/schedulerHistoryListModal.html
+++ b/src/main/resources/public/template/scheduler/schedulerHistoryListModal.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
-<table>
-    <thead class="z-list-head">
+<table class="z-table">
+    <thead class="z-table-head">
     <tr>
         <th style="width: 15%;" class="align-center" th:text="#{scheduler.label.historyNo}"></th>
         <th style="width: 10%;" class="align-center" th:text="#{scheduler.label.immediatelyExecute}"></th>
@@ -11,7 +11,7 @@
         <th style="width: 40%;" class="align-center" th:text="#{scheduler.label.errorMessage}"></th>
     </tr>
     </thead>
-    <tbody class="z-list-body">
+    <tbody class="z-table-body">
     <tr class="no-data-found-list flex-row align-items-center" th:if="${#arrays.isEmpty(schedulerHistoryList)}">
         <td style="width: 100%;" colspan="9" class="align-center" th:text="#{common.msg.noData}"></td>
     </tr>
