--- a/src/main/resources/public/template/scheduler/schedulerSearch.html
+++ b/src/main/resources/public/template/scheduler/schedulerSearch.html
@@ -27,7 +27,7 @@
     </div>
 </div>
 <div layout:fragment="pageList">
-    <div class="z-list-content" id="schedulerList"></div>
+    <div class="z-list-content flex-row" id="schedulerList"></div>
 </div>
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
