--- a/src/main/resources/public/template/workflow/documentDisplayModal.html
+++ b/src/main/resources/public/template/workflow/documentDisplayModal.html
@@ -3,25 +3,27 @@
 <body>
 <!-- 신청서 양식 편집 모달 -->
 <div class="document-display-content">
-    <table id="documentDisplay">
-        <tr id="documentElementRow">
-            <th class="column-title"></th>
-            <th:block th:each="element : ${documentDisplayList.elements}">
-                <th class="column-title" th:id="${element.elementId}" th:text="${element.elementName}"/>
-            </th:block>
-        </tr>
-        <tr th:each="group : ${documentDisplayList.formGroups}">
-            <th th:id="${group.formGroupId}" th:text="${group.formGroupName}"/>
-            <th:block th:each="display : ${group.displayValue}">
-                <td>
-                    <select th:id="${group.formGroupId} + '_' + ${display.elementId}" name="displays" class="col-3">
-                        <option th:each="displayType :${documentDisplayTypeList}" th:text="${displayType.codeValue}"
-                                th:value="${displayType.code}" th:selected="${displayType.code} == ${display?.display}">
-                        </option>
-                    </select>
-                </td>
-            </th:block>
-        </tr>
+    <table class="z-table" id="documentDisplay">
+        <tbody class="z-table-body">
+            <tr id="documentElementRow">
+                <th class="align-bottom pb-2"></th>
+                <th:block th:each="element : ${documentDisplayList.elements}">
+                    <th class="align-bottom pb-2" th:id="${element.elementId}" th:text="${element.elementName}"/>
+                </th:block>
+            </tr>
+            <tr th:each="group : ${documentDisplayList.formGroups}">
+                <th th:id="${group.formGroupId}" th:text="${group.formGroupName}"/>
+                <th:block th:each="display : ${group.displayValue}">
+                    <td>
+                        <select th:id="${group.formGroupId} + '_' + ${display.elementId}" name="displays" class="col-3">
+                            <option th:each="displayType :${documentDisplayTypeList}" th:text="${displayType.codeValue}"
+                                    th:value="${displayType.code}" th:selected="${displayType.code} == ${display?.display}">
+                            </option>
+                        </select>
+                    </td>
+                </th:block>
+            </tr>
+        </tbody>
     </table>
 </div>
 </body>
