--- a/src/main/resources/public/template/workflow/workFlowList.html
+++ b/src/main/resources/public/template/workflow/workFlowList.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<table class="z-list-table">
-    <thead class="z-list-head">
+<table class="z-table">
+    <thead class="z-table-head">
         <tr class="flex-row align-items-center">
             <th width="25%" class="align-left" th:text="#{workflowAdmin.label.name}"></th>
             <th width="10%" class="align-left" th:text="#{workflowAdmin.label.type}"></th>
@@ -17,7 +17,7 @@
             <th width="10%" class="align-center" th:text="#{common.label.delete}"></th>
         </tr>
     </thead>
-    <tbody class="z-list-body">
+    <tbody class="z-table-body">
         <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(documentList)}">
             <td style="width:100%" colspan="7" class="align-center" th:text="#{common.msg.noData}"></td>
         </tr>
